// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Icon should render the colour accent 1`] = `
<div>
  <i
    aria-hidden="true"
    class="mx_Icon mx_Icon_16 mx_Icon_accent"
    role="presentation"
    style="mask-image: url(\\"image-file-stub\\");"
  />
</div>
`;

exports[`Icon should render the colour live-badge 1`] = `
<div>
  <i
    aria-hidden="true"
    class="mx_Icon mx_Icon_16 mx_Icon_live-badge"
    role="presentation"
    style="mask-image: url(\\"image-file-stub\\");"
  />
</div>
`;

exports[`Icon should render the size 16 1`] = `
<div>
  <i
    aria-hidden="true"
    class="mx_Icon mx_Icon_16 mx_Icon_accent"
    role="presentation"
    style="mask-image: url(\\"image-file-stub\\");"
  />
</div>
`;
